styles.css
body {
  background-color: #e5e5e5;
  padding: 0;
  margin: 0;
}

/* "Mobile First" Styling */
.wrapper {
  display: flex;
  flex-direction: column;
  max-width: 1024px;
  margin: auto;
  background-color: #f8f7f7;
  padding: 0;
}

.fa-bars {
  font-size: 20px;
}

.nav-bar {
  margin: 26px 24px 20px;
  color: #6070ff;
  display: flex;
  font-weight: 700;
  justify-content: space-between;
  font-family: "Roboto", sans-serif;
}

.nav-bar p {
  padding: 0;
  margin: 0;
  font-weight: 700;
}

button {
  cursor: pointer;
}

section {
  max-width: 100%;
}

.nav-bar li {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.top-section {
  width: 95%;
  margin: auto;
}

.logo-box a {
  text-decoration: none;
  color: #6070ff;
}

.logo-box span,
.logo-box p {
  width: 50%;
}

.second-section-container {
  background-image: url("./assets/images/mobileBackground.png");
  background-size: 100% 90%;
  background-repeat: no-repeat;
  width: 60%;
  border-bottom-left-radius: 150px;
}

.second-section p {
  margin: 0;
  padding: 0;
}

.second-section {
  padding: 108px 24px 0;
  width: 80%;
}

.second-section p:first-child,
.second-section p:nth-child(2) {
  font-size: 40px;
  font-weight: bolder;
  width: 90%;
  color: #172b4d;
}

.header,
.second-section-container {
  width: 100%;
  background-color: white;
}

.header {
  border-bottom-left-radius: 100px;
  font-family: "Poppins", sans-serif;
}

.connect {
  color: #7f8cff;
  font-size: 16px;
  font-weight: 500;
  margin-top: 900px;
}

.social-container {
  display: flex;
  list-style-type: none;
  padding-bottom: 138px;
  padding-left: 0;
  width: 100%;
}

.second-section p:nth-child(4) {
  margin-top: 12px;
}

.second-section p:nth-child(3) {
  color: #344563;
  margin-top: 12px;
}

.social-container li {
  margin-right: 20px;
  font-size: 25px;
  width: 20px;
  color: #505f79;
}

.social-container li a {
  text-decoration: none;
  color: inherit;
}

.projects {
  display: grid;
  grid-template-columns: 100%;
  grid-column-gap: 50px;
  width: 100%;
  margin: auto;
}

.project {
  margin: 80px 24px 0;
  border: 1px solid #dfe1e6;
  display: flex;
  flex-direction: column;
  padding-bottom: 27px;
  border-radius: 16px;
  background-color: white;
  font-family: "Poppins", sans-serif;
}

.project > * {
  margin: 0 16px;
}

.project img {
  margin-top: 10px;
}

.project-image {
  margin: auto;
  margin: 0 10px;
}

.project-name {
  font-size: 32px;
  font-weight: bolder;
  margin-top: 10px;
  margin-bottom: 10px;
  width: 70%;
  color: #172b4d;
}

.project-year {
  margin-bottom: 0;
  display: flex;
  list-style-type: none;
  padding: 0;
}

.project-year > * {
  margin-right: 5px;
}

.canopy {
  font-size: 13px;
  font-weight: bolder;
  color: #344563;
}

.role {
  font-size: 13px;
  color: #7a869a;
  font-weight: bolder;
}

.dot {
  background-color: #c1c7d0;
  width: 5px;
  height: 5px;
  border-radius: 100%;
  position: relative;
  bottom: -7px;
}

.project-description {
  color: #344563;
  margin-bottom: -15px;
}

.project-technologies {
  display: flex;
  flex-wrap: wrap;
  padding: 20px 0 25px;
  list-style-type: none;
}

.project-technologies > * {
  margin-right: 10px;
  border-radius: 8px;
  background-color: #ebebff;
  padding: 5px 10px;
  color: #6070ff;
  font-size: 12px;
}

.project-button {
  width: 130px;
  height: 48px;
  background-color: white;
  border: 2px solid #6070ff;
  border-radius: 8px;
  font-size: 17px;
  color: #396df2;
  font-weight: 500;
  transition: all 0.5s;
}

.project-button:hover {
  background-color: #6070ff;
  border: 2px solid #6070ff;
  border-radius: 8px;
  font-size: 17px;
  color: #fff;
  font-weight: 500;
}

.project-button:active {
  background-color: #2230d2;
  border: 2px solid #2230d2;
  border-radius: 8px;
  font-size: 17px;
  color: #fff;
  font-weight: 500;
}

.project-button:link {
  background-color: white;
}

.about-container {
  background-color: #fff;
  margin-top: 114px;
  border-top-right-radius: 100px;
  padding: 0 24px;
  font-family: "Poppins", sans-serif;
}

.about > * {
  width: 100%;
}

.about-intro-section p:first-child {
  color: #172b4d;
  font-size: 40px;
  font-weight: 900;
  margin-top: 92px;
  margin-bottom: 10px;
  line-height: 1.2;
  width: 150px;
}

.connect-about {
  color: #7f8cff;
  font-size: 16px;
  font-weight: 500;
}

.about-intro-section p:nth-child(2) {
  color: #344563;
  padding-top: 0;
  margin-top: 0;
}

.social-container-about {
  list-style-type: none;
  display: flex;
  flex-direction: row;
  margin: 26px 0 20px;
  padding: 0 0 0 12px;
}

.social-container-about li {
  margin-right: 20px;
  font-size: 25px;
  width: 20px;
  color: #505f79;
}

.about .project-button {
  width: auto;
  padding-right: 12px;
  padding-left: 12px;
  font-size: 17px;
}

.tech-stacks {
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-bottom: 350px;
}

.lang-and-icon {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 90%;
  margin-top: 50px;
  margin-bottom: 36px;
}

.lang-and-icon span:first-child {
  font-size: 20px;
  font-weight: 500;
}

.fa-chevron-down,
.fa-chevron-right {
  color: #505f79;
}

.langs-frames-skills {
  margin: 0 15px -30px;
  width: 90%;
  padding-bottom: 0;
}

.lang-list {
  display: flex;
  flex-direction: column;
}

.second-section ul {
  margin-bottom: 80px;
}

.lang {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: 0 0 10.72px;
  padding: 10px;
  background-color: #f7f7f9;
  border-radius: 8px;
}

.js,
.html,
.css {
  color: #253858;
}

.lang-logo {
  width: 48px;
  height: 48px;
  margin-right: 16px;
}

.frames-and-icon,
.skills-and-icon {
  border-bottom: 1px solid #dfe1e6;
  padding-left: 12px;
  padding-right: 42px;
  width: 80%;
  padding-bottom: 23px;
}

.contact-wrapper {
  background-color: #6070ff;
  padding: 21px 0 0;
  border-top-left-radius: 70px;
  margin-top: -180px;
}

.contact {
  background: url("./assets/images/contact_background.png");
  background-size: 60% 100%;
  background-repeat: no-repeat;
  background-position: top right;
  background-color: #6070ff;
  font-family: "Poppins", sans-serif;
  border-top-left-radius: 100px;
  width: 100%;
  padding: 13px 24px 0;
  box-sizing: border-box;
}

.contact p:first-child {
  text-align: center;
  font-weight: bold;
  font-size: 40px;
  margin-bottom: 0;
  color: #fff;
}

.contact p:first-of-type {
  color: #ebebff;
  font-size: 40px;
  text-align: center;
  font-weight: bold;
  margin-top: 80px;
}

.contact p:nth-child(2) {
  color: #fff;
  text-align: center;
  font-size: 20px;
  margin-bottom: 40px;
}

.name,
.email {
  width: 100%;
  height: 48px;
  margin-bottom: 20px;
  border-radius: 8px;
  border: none;
  padding: 15px;
  font-size: 20px;
  color: #172b4d;
  box-sizing: border-box;
  transition: all 0.5s;
}

.name:focus,
.email:focus,
.msg:focus {
  transform: scale(1.05);
}

.msg {
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 8px;
  margin-bottom: 22px;
  color: black;
  font-family: Poppins, sans-serif;
  font-size: 20px;
  transition: all 0.5s;
}

.send {
  color: #6070ff;
  width: 140px;
  height: 48px;
  font-size: 17px;
  border-radius: 8px;
  margin-bottom: 32px;
  border: none;
}

.send:hover {
  border: 1px solid white;
}

.menu {
  display: none;
}

.image {
  width: 100%;
  transition: all 0.5s;
}

.image:hover {
  transform: scale(1.1);
}

/* Desktop media queries */
@media all and (min-width: 1020px) {
  .wrapper {
    min-width: 100%;
  }

  .menu-icon {
    display: none;
  }

  .menu {
    display: flex;
    list-style-type: none;
    padding: 0;
    justify-content: space-between;
  }

  .nav-bar {
    max-width: 80%;
    color: #344563;
    margin: 10px auto 50px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 20px;
  }

  .nav-bar li {
    margin-left: 50px;
  }

  .nav-bar li a {
    text-decoration: none;
    color: inherit;
  }

  .top-section {
    width: 100%;
    padding: 0;
  }

  .second-section-container {
    background-image: url("./assets/images/headerBackground.png");
    margin: 0 auto;
    display: flex;
    align-self: center;
    width: 95%;
  }

  .second-section {
    width: 70%;
    margin: auto;
  }

  .second-section p:first-child {
    padding-top: 80px;
  }

  /* Project section styling */
  .project {
    display: grid;
    grid-template-columns: 50% 50%;
    column-gap: 10px;
    width: 75%;
    margin: 100px auto 0;
    padding: 10px 20px 10px 10px;
    box-sizing: border-box;
  }

  .project:hover {
    border: 1px solid #a7afff;
    box-shadow: 10px 20px 60px 5px rgba(197, 201, 250, 0.8);
  }

  .project-image {
    width: 100%;
    display: flex;
    margin: 0;
    overflow: hidden;
  }

  .project .image {
    padding-top: 0;
    margin-top: 0;
  }

  .project2 .project-image,
  .project4 .project-image {
    order: 2;
  }

  .second-section p:first-child,
  .second-section p:nth-child(2) {
    font-size: 48px;
  }

  .second-section .connect {
    padding-top: 20px;
  }

  .about {
    display: grid;
    grid-template-columns: 40% 60%;
    padding: 0 190px;
  }

  .about-intro-section p:nth-child(2) {
    font-size: 18px;
  }

  .lang {
    width: 100px;
    flex-direction: column;
    margin-right: 10px;
    justify-content: space-between;
    align-items: flex-start;
    height: 80px;
    padding-left: 5px;
  }

  .lang-list {
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
  }

  .css {
    margin-left: 5px;
  }

  .tech-stacks {
    margin: 50px 0 0 10px;
  }

  .contact {
    background-image: url("./assets/images/contact_form_big_background.png");
    background-size: 100% 100%;
    text-align: center;
    padding-bottom: 50px;
    border-top-left-radius: 400px;
  }

  .contact-wrapper {
    border-top-left-radius: 200px;
  }

  .contact p:first-child {
    padding-bottom: 30px;
  }

  .contact > * {
    max-width: 400px;
    margin: auto;
  }

  .send {
    align-self: center;
  }

  .project > section:nth-child(2) {
    margin: 20px 0 0 20px;
  }
}

